<resources>
    <string name="app_name">Week4Network</string>
    <string name="start_game">Start Game</string>
    <string name="please_wait">Please Wait</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="select_level">Select Level</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="user_label">E - Mail</string>
    <string name="hint_user_label">E - Mail</string>
    <string name="user_password_label">Password</string>
    <string name="hint_pass_label">Password</string>
    <string name="sing_up">Create Account</string>
    <string name="connection_error_message">You do not have connection</string>
    <string name="network_error">Unable to connect server.</string>
    <string name="network_connection_error">you do not have an internet connection.</string>
    <string name="go">Go!</string>

    <string name="sing_up_button">Sing Up</string>
    <string name="welcome_message">Welcome to this application! Please create a new account</string>
    <string name="forget_password">Forget Password</string>
    <string name="send_reset_password">Reset Password</string>

    <string-array name="email_error_codes">
        <item>default error</item>
        <item>User name can not be null</item>
        <item>Please enter a valid email adress.</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="password_error_codes">
        <item>default error</item>
        <item>Password can not be null</item>
        <item>Please enter a valid password.</item>
    </string-array>
    <string name="get_data">getData</string>
    <string name="show_Image">Show Image</string>
    <string name="open_classic_way">Open Classic Way</string>
    <string name="open_api_call_different_class">Open API Call Different Class</string>
    <string name="open_introduction_activity">Open Introduction Activity</string>
    <string name="get">GET</string>
    <string name="get_user">GET Users</string>
    <string name="post_user">Post Users</string>
    <string name="get_user_by_id">Get User By ID</string>
    <string name="get_user_by_id_and_post_id">Get User By ID and post Id</string>
    <string name="get_by_hashmap">Get By Hashmap</string>
    <string name="change_the_part_of_the_url">Change The Part Of The URL</string>
    <string name="different_end_point">Different endpoint</string>
    <string name="send_request_with_header">Send Request With Header</string>
    <string name="send_request_with_header_dynamic">Send Request With Header Dynamic</string>
    <string name="logging">Logging</string>

</resources>