<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".Retrofit.Activities.IntroductionRetrofitActivity">

    <Button
        android:layout_weight="1"
        android:id="@+id/get_button"
        android:text="@string/get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:layout_weight="1"
        android:id="@+id/get_user_button"
        android:text="@string/get_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:layout_weight="1"
        android:id="@+id/post_button"
        android:text="@string/post_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:layout_weight="1"
        android:id="@+id/get_user_by_id_button"
        android:text="@string/get_user_by_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>


    <Button
        android:layout_weight="1"
        android:id="@+id/get_user_by_id_and_post_id_button"
        android:text="@string/get_user_by_id_and_post_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:layout_weight="1"
        android:id="@+id/get_hashmap_button"
        android:text="@string/get_by_hashmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>
    <Button
        android:layout_weight="1"
        android:id="@+id/change_the_part_of_the_url_button"
        android:text="@string/change_the_part_of_the_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:layout_weight="1"
        android:id="@+id/get_different_endpoint_button"
        android:text="@string/different_end_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:layout_weight="1"
        android:id="@+id/send_request_with_header_button"
        android:text="@string/send_request_with_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:layout_weight="1"
        android:id="@+id/send_request_with_header_dynamic_button"
        android:text="@string/send_request_with_header_dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

    <Button
        android:layout_weight="1"
        android:id="@+id/logging_button"
        android:text="@string/logging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

</LinearLayout>